# fibergen

./: CMakeLists.txt  t13.msh
src/: fibergen.cpp
tests/: fibergen.py  makemesh.py  t1.json  test_crossing.py  test_periodic_1.py  test_periodic_2.py  testgeom.stl
